# keywords-stats

./: .gitignore  Dockerfile.app  docker-compose.yaml  docker_hub_publish_app.sh  pyproject.toml  readme.md
app/: main.py  test_main.py
k8s-deployment/: app-deployment.yaml  app-hpa.yaml  app-service.yaml  redis-service.yaml  redis-statefulset.yaml
