[tool.poetry]
name = "keywords-stats"
version = "0.1.0"
description = ""
authors = ["michael kan <michael.kan.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
redis = "^5.0.4"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
